# mpoxes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  vcpkg.json
Levels/: 52.mlvl  current.mlvl  test.mlvl  test2.mlvl
Shaders/: shader.vert
Source/: EnetTest.cpp  Input.cpp  Input.h  MPoxes.cpp  NetworkTest.cpp
Source/Client/: GameClient.cpp  GameData.cpp  GameData.h  GameDebug.cpp  Input.cpp  Input.h
Source/Game/: Game.cpp  Game.h  GameClient.cpp  GameData.cpp  GameData.h  GameDebug.cpp  GameServer.cpp  Input.cpp  Input.h  MPoxes.cpp  Main.cpp  Mesh.h  Packets.h  Player.cpp  Player.h  Random.h  Texture.h
Source/Level/: Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  Wall.cpp  Wall.h
Source/LevelEditor/: LevelEditor.cpp  LevelEditor.h  Main.cpp
Source/Math/: Color.h  Random.h  Rect.h  Vector.h  WorldToScreen.h
Source/Render/: Camera2D.h  Mesh.h  Shader.h  Texture.h
Source/Server/: GameServer.cpp
Source/Tests/: Level.Test.cpp  Packets.Test.cpp  Testing.h
